--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "scripts": {
     "test": "wdio run ./wdio.conf.js --spec ./src/test_scripts/TC_Search.js",
     "wdio": "wdio run ./wdio.conf.js"
+  },
+  "dependencies": {
+    "@wdio/allure-reporter": "^8.29.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
